--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "camunda-dmn-moddle",
   "version": "1.1.0",
   "description": "Camunda moddle extensions for DMN 1.1",
+  "files": [
+    "resources"
+  ],
   "scripts": {
     "all": "run-s lint test",
     "lint": "eslint .",
