--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "camunda-dmn-moddle",
   "version": "1.1.0",
-  "description": "Camunda moddle extensions for DMN 1.1",
+  "description": "Camunda moddle extensions for DMN",
   "files": [
     "resources"
   ],
