--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-bpmn-io": "^1.0.0",
     "esm": "^3.0.15",
     "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.2",
+    "npm-run-all2": "^6.1.1",
     "xsd-schema-validator": "^0.7.0"
   },
   "dependencies": {
